# demo

./: .gitignore  pom.xml
assembly/: Makefile  add.asm  c-print  c-print.asm  c-print64.asm  conditional-transfer.asm  hello-world02.asm  main.asm  memory.asm
c/child-process/: Makefile  Readme.md  exec.c  pipecmd.c  utils.h
c/container/: CMakeLists.txt  array_list.c  array_list.h
c/container/test/: main.c
c/gtk/: CMakeLists.txt
c/mmap/: Makefile  mmap-read.c  mmap-write.c
c/pipeline/: .gitignore  Makefile  Readme.md  pipeline.c  popen.c
c/process/: Makefile  signal.c
c/socket/: Makefile  tcp-client.c  tcp-server.c  udp-server.c  unix-tcp-server.c  unix-udp-client.c  unix-udp-server.c
c/sparse-file/: .gitignore  Makefile  sparse-files-03.c
c/thread-pool/: Makefile  thread_pool.c  thread_pool.h
compilation/: .gitignore  Makefile  main32.asm  print32.asm
java/: .gitignore
java-util-api/: pom.xml
java/code-detection/: Readme.md  notes.txt  pom.xml
java/conventional-demo/: Readme.md
java/interprocess-communication/: Readme.md
java/jdbc-demo/: Readme.md
java/jni-demo/: Readme.md
java/mybatis-mapper-demo/: Readme.md  pom.xml
java/spring-data-jpa-demo/: Readme.md  pom.xml
kotlin/hello-word/: settings.gradle.kts
linux/bluetooth/: .gitignore  rfcomm-server.c
linux/camera/: camera.py
linux/dbus/: Readme.md  calculator.py  counter_signal.py  get_hostname.py  signal_test.py
linux/debian-package/: Readme.md
linux/lcd/: LCDScreen.py  Readme.md  ST7789VW.py  main.py
lua/: test.lua
mail/: Readme.md  main.sh  smtp.sh
myabtis/: pom.xml
mybatis/: pom.xml
mysql/group-max/: answer.mysql  topic.mysql
neovim/: demo.c
nodejs/electron-demo/: package.json
programming-language/assembly/: Makefile  arithmetic.asm  c-demo.c  hello-world.asm  push-pop.asm
programming-language/lua/: .gitignore  capi01.c  capi02.c  test.lua
programming-language/python/package-demo/build+setuptools/: Readme.md  pyproject.toml
programming/assembly/: c-print.asm  print.asm
programming/lua/: Makefile  demo.c
python/: .gitignore
python/package-demo/: PKGBUILD  Readme.md
python/tkinter/: hello-word.py
vimscript/: popup-window.vim
windows/: .gitignore
(+175 files in other folders)
